@@ -1,7 +1,8 @@
 1.18.0.1 -> 1.18.0.2
 
+added variables
+changed library_type to library_translation
 added `network_name` and `network_summary`
-
 
 1.18.0 -> 1.18.0.1
 
